bk_ida/gccida/g2/truthvalue_conversion
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2567:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2568:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2570:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2571:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2575:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2577:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2582:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2584:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2585:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2587:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2588:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2644:21: error: expected expression
v8 = *( tree_node **)( elements->int_cst.int_cst.low + 8); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2644:9: error: use of undeclared identifier 'tree_node'
v8 = *( tree_node **)( elements->int_cst.int_cst.low + 8); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2706:3: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
( tree_code)( ( *( ( _BYTE *)&elements->block.common + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
  ^~~~~~~~~
  tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2706:103: error: too few arguments to function call, expected 3, have 1
( tree_code)( ( *( ( _BYTE *)&elements->block.common + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
~~~~~~~~~~~~                                                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/tree.h:2477:1: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2714:21: error: expected expression
imag = ( tree_node *)*( &global_trees + 11); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/c-common.c:2714:10: error: use of undeclared identifier 'tree_node'
imag = ( tree_node *)*( &global_trees + 11); 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/truthvalue_conversion/src/obj/c-common.o] Error 1
